# shorkin

./: README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
shorkin/: __init__.py  cli.py  deutsch_jozsa.py  display.py  factor.py  gates.py  grover.py  rsa.py  teleportation.py
shorkin.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
shorkin/classical/: continued_fractions.py  math_utils.py  order_finder.py
shorkin/qkd/: __init__.py  _types.py  b92.py  bb84.py  channel.py  e91.py  encryption.py  error_estimation.py  key_store.py  privacy_amplification.py  protocol.py  sifting.py
shorkin/quantum/: modular_exp.py  order_finder.py
shorkin/transport/: __init__.py  _key_manager.py  _messages.py
shorkin/transport/grpc/: __init__.py  interceptor.py  qkd.proto  qkd_pb2.py  qkd_pb2_grpc.py  servicer.py
shorkin/transport/http/: __init__.py  _base.py  django.py  fastapi.py  starlette.py  tornado.py
tests/: test_classical_order_finder.py  test_cli.py  test_deutsch_jozsa.py  test_factor.py  test_gates.py  test_grover.py  test_math_utils.py  test_quantum_order_finder.py  test_rsa.py  test_teleportation.py
tests/qkd/: test_b92.py  test_bb84.py  test_channel.py  test_e91.py  test_encryption.py  test_error_estimation.py  test_key_store.py  test_privacy_amplification.py  test_protocol_integration.py  test_sifting.py
tests/transport/: test_django.py  test_fastapi.py  test_grpc_interceptor.py  test_key_manager.py  test_messages.py  test_starlette.py  test_tornado.py
