[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shorkin"
version = "0.1.0"
description = "Shor's algorithm CLI using Google Cirq"
requires-python = ">=3.10"
dependencies = [
    "cirq-core>=1.3,<2.0",
    "sympy>=1.12",
    "cryptography>=41.0",
    "numpy>=1.24",
]

[project.scripts]
shorkin = "shorkin.cli:main"

[tool.setuptools.packages.find]
include = ["shorkin*"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-timeout>=2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 120
