[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shorkin"
version = "1.1.1"
description = "Quantum computing toolkit: Shor's, Grover's, Deutsch-Jozsa, teleportation, gates, and QKD protocols"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "cirq-core>=1.3,<2.0",
    "sympy>=1.12",
    "cryptography>=41.0",
    "numpy>=1.24",
]

[project.scripts]
shorkin = "shorkin.cli:main"

[tool.setuptools.packages.find]
include = ["shorkin*"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-timeout>=2.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.24",
]
fastapi = [
    "fastapi>=0.100",
    "starlette>=0.27",
]
starlette = [
    "starlette>=0.27",
]
django = [
    "django>=4.2",
]
tornado = [
    "tornado>=6.3",
]
grpc = [
    "grpcio>=1.57",
    "grpcio-tools>=1.57",
    "protobuf>=4.24",
]
http = [
    "shorkin[fastapi,starlette,django,tornado]",
]
all = [
    "shorkin[http,grpc,dev]",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 120
